<resources>
    <string name="app_name">99Spicy.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In and Start Shopping</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="welcome">Welcome</string>
    <string name="generate_otp">Generate otp</string>
    <string name="or">OR</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_cart">My Cart</string>
    <string name="title_profile">Profile</string>
    <string name="create_account">create account</string>
    <string name="search_products">Search Products</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="dawat_biriyani_basmati_rice">Dawat Biriyani Basmati Rice</string>
    <string name="_50_off">50% Off</string>
    <string name="_99_00_rs">99.00 RS/-</string>
    <string name="add">Add</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="place_order">Place Order</string>
    <string name="sign_out">Sign Out</string>
    <string name="wallet">My Wallet</string>
    <string name="orders">My Orders</string>
    <string name="delivery_add">Delivery Address</string>
    <string name="shareandearn">Share and Earn</string>
    <string name="rate_us">Rate Us</string>
    <string name="demo_add">Deliver To: Kolkata, West Bengal, 730001</string>
</resources>