<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".user.LoginFragment"
        android:background="@drawable/ic_log_in_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.055"
                android:src="@drawable/app_logo"
                 />

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/alfa_slab_one"
                android:text="@string/welcome"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/log_in"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/log_in_phone_textInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/log_in_phone_textInpu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mobile_number"
                            android:inputType="phone"
                            android:maxLength="10" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/log_in_generate_otp_button"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/generate_otp"
                        app:layout_constraintEnd_toEndOf="@+id/log_in_phone_textInputLayout"
                        app:layout_constraintTop_toBottomOf="@+id/log_in_phone_textInputLayout" />


                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/or"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/log_in_generate_otp_button" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="16dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintBottom_toBottomOf="@+id/textView4"
                        app:layout_constraintEnd_toStartOf="@+id/textView4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView4" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="24dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintBottom_toBottomOf="@+id/textView4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView4"
                        app:layout_constraintTop_toTopOf="@+id/textView4" />

                    <Button
                        android:id="@+id/log_in_create_account_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="32dp"
                        android:text="@string/create_account"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/view"
                        app:layout_constraintStart_toStartOf="@+id/view2"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>