<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="product"
            type="com.a99Spicy.a99spicy.domain.DomainProduct" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/product_imageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/grocery_place_holder" />

        <TextView
            android:id="@+id/product_name_textView"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@{product.productName+` (`+product.productQuantity+`)`}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_imageView"
            app:layout_constraintTop_toTopOf="@+id/product_imageView"
            tools:text="@string/dawat_biriyani_basmati_rice" />

        <TextView
            android:id="@+id/product_price_textView"
            style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/open_sans_semibold"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/product_name_textView"
            app:layout_constraintTop_toBottomOf="@+id/product_name_textView"
            tools:text="@string/_99_00_rs" />

        <TextView
            android:id="@+id/product_discount_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/open_sans"
            android:text="@{product.productPrice+` Rs/-`}"
            app:layout_constraintBottom_toBottomOf="@+id/product_price_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_price_textView"
            app:layout_constraintTop_toTopOf="@+id/product_price_textView"
            tools:text="@string/_99_00_rs" />

        <Button
            android:id="@+id/add_to_cart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:drawableEnd="@drawable/ic_baseline_add_24"
            android:drawablePadding="8dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/product_discount_textView"
            app:layout_constraintTop_toBottomOf="@+id/saving_textView" />

        <Button
            android:id="@+id/subscribe_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/subscribe"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/quantity_linearLayout"
            app:layout_constraintStart_toStartOf="@+id/product_name_textView"
            app:layout_constraintTop_toBottomOf="@+id/saving_textView" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorProfileBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/product_name_textView"
            app:layout_constraintStart_toStartOf="@+id/product_imageView" />

        <TextView
            android:id="@+id/saving_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/colorGreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/product_price_textView"
            app:layout_constraintTop_toBottomOf="@+id/product_discount_textView"
            tools:text="Your Save 55.00 Rs/-" />

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/savings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/fredoka_one"
                android:gravity="center"
                android:text="@{product.productDiscount+`%\nOff`}"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                tools:text="50%\noff" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/quantity_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/subscribe_button"
            app:layout_constraintEnd_toStartOf="@+id/add_to_cart_button"
            app:layout_constraintTop_toTopOf="@+id/subscribe_button">

            <ImageButton
                android:id="@+id/minus_quantity_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:src="@drawable/ic_baseline_indeterminate_check_box_24" />

            <TextView
                android:id="@+id/product_qty_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:gravity="center"/>

            <ImageButton
                android:id="@+id/add_quantity_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:src="@drawable/ic_baseline_add_box_24" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>